# rfid2

rfid_code/AccessControlAttendanceSystem/pyserver/: requirements.txt
rfid_code/AccessControlAttendanceSystem/pyserver/accesscont/: __init__.py  views.py
rfid_code/AccessControlAttendanceSystem/testcode/clionproject/: CMakeLists.txt  main.cpp
rfid_vue/test2/: package-lock.json  package.json  vite.config.js
rfid_vue/test2/src/: App.vue
rfid_vue/untitled/: package-lock.json  package.json  vite.config.js
